# SPEED-Scailable

./: README.md
sclbl-esp32-crackdetection/: README.md  sdkconfig.defaults
sclbl-esp32-crackdetection/components/ssd1306/: CMakeLists.txt
sclbl-esp32-crackdetection/main/: CMakeLists.txt  app_main.cpp  m3_api_esp_wasi.c
sclbl-esp32-crackdetection/sclbl-wasi/: convert.sh  model.base64  sclbl.wasm  sclbl.wasm.h
sclbl-esp32-crackdetection/sclbl-wasi/lenet.mnist/: sclbl.wasm  sclbl.wasm.h
sclbl-esp32-crackdetection/sclbl-wasi/sklearn1/: sclbl.wasm  sclbl.wasm.h
sclblR/: .Rbuildignore  DESCRIPTION  NAMESPACE  NEWS.md  README.md  cran-comments.md  sclbl_config.yml
sclblR/R/: data.R  sclbl_functions.R
sclblR/data/: houses.rda
sclblR/data-raw/: houses.R  houses.csv
sclblR/demo/: 00Index  bart.R
sclblR/man/: houses.Rd  save_bart.Rd
sclblR/tests/: testthat.R
sclblR/tests/testthat/: test-bart.R
sclblpy/: setup.py
